10662
A simpler example (no f-bounds):
```
% tail -n1000 test/files/pos/existential-java-case-class/*
==> test/files/pos/existential-java-case-class/Client.scala <==
case class CC(x: J[_])

==> test/files/pos/existential-java-case-class/J.java <==
public class J<T extends String> {}

% qbin/scalac test/files/pos/existential-java-case-class/*
test/files/pos/existential-java-case-class/Client.scala:1: error: object creation impossible, since method apply in trait Function1 of type (v1: J[_])CC is not defined
(Note that T1 does not match J[_ <: String])
case class CC(x: J[_])
           ^
one error found
```
